# QuickJniCache

./: Cargo.toml  README.md
src/: jni_methods_cache.rs  lib.rs  platform.rs
src/jni_methods_cache/: executor.rs  methods_cache.rs
src/platform/: android.rs
src/platform/android/: initializer.rs
