[package]
name = "jni-methods-cache"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

jni = { version = "0.21.0", features = ["invocation"] }
parking_lot = "0.12.2"


winit = { path = "/home/camille/Documents/rust/cargo-mobile/patches/winit-0.28.7/", features = [
  "android-native-activity",
] }
